--- a/public/assets/css/custom-enhanced.css
+++ b/public/assets/css/custom-enhanced.css
@@ -306,3 +306,13 @@ body {
   margin-top: auto !important;
   padding-bottom: 20px;
 }
+
+/* --- Dropdown --- */
+
+ul.dropdown-menu.dropdown-menu-end {
+  box-shadow: -22px -1px 5px #00000038 !important;
+}
+
+.dropdown-menu .dropdown-item {
+  opacity: 0.9;
+}
