--- a/public/assets/pug/pages/template/base-input.pug
+++ b/public/assets/pug/pages/template/base-input.pug
@@ -248,7 +248,7 @@ html(lang='en')
                           .mb-3.row
                             label.col-sm-3.pt-0 Color picker
                             .col-sm-2
-                              input.form-control.form-control-color(type='color', value='#006666')
+                              input.form-control.form-control-color(type='color', value='#d40306')
                           .mb-3.row
                             label.col-sm-3  
                               | Maximum 
@@ -480,3 +480,4 @@ html(lang='en')
           // Container-fluid Ends
         include ../../components/footer
     include ../../components/footer-files      
+
