--- a/public/assets/pug/pages/template/email-order-success.pug
+++ b/public/assets/pug/pages/template/email-order-success.pug
@@ -90,12 +90,12 @@ html(lang='en')
         display:flex;
         justify-content:center;
         align-items:center;
-        color: #006666;       
-        border:1px solid  #006666;
+        color: #d40306;       
+        border:1px solid  #d40306;
         transition:all 0.5s ease;
       }
       .temp-social td i:hover{
-        background-color: #006666;
+        background-color: #d40306;
         color:#ffffff;
       }   
       .temp-social td:nth-child(n+2){
@@ -130,7 +130,7 @@ html(lang='en')
           left:0;
           width:100%;
           height:5px;
-          background-color: #006666; 
+          background-color: #d40306; 
       }
       .deliver-status li:first-child::before,.deliver-status li:last-child::before{
         width:50%
@@ -160,7 +160,7 @@ html(lang='en')
         font-size:14px;
       }
       .deliver-status li .order-icon.active{
-          background-color:  #006666;         
+          background-color:  #d40306;         
       }
       .deliver-status li .order-icon.active i{
         color:#ffffff;
@@ -457,10 +457,10 @@ html(lang='en')
                       tbody
                         tr
                           td
-                            a(href='javascript:void(0)' style='color:#006666;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
+                            a(href='javascript:void(0)' style='color:#d40306;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
                         tr
                           td 
                             p(style='font-size:14px; margin:8px 0; color:#717171;') 2022 - 23 CopyRight by Themeforest powered by PixelStrap
                         tr
                           td
-                            a(href='javascript:void(0)' style='color:#006666;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
+                            a(href='javascript:void(0)' style='color:#d40306;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
