--- a/public/assets/pug/pages/template/invoice-1.pug
+++ b/public/assets/pug/pages/template/invoice-1.pug
@@ -129,7 +129,7 @@ html(lang='en')
                   td 
                     table.order-details(style='width: 100%;border-collapse: separate;border-spacing: 0 10px;')
                       thead 
-                        tr(style="background: #006666 ;border-radius: 8px;overflow: hidden;box-shadow: 0px 10.9412px 10.9412px rgba(82, 77, 141, 0.04), 0px 9.51387px 7.6111px rgba(82, 77, 141, 0.06), 0px 5.05275px 4.0422px rgba(82, 77, 141, 0.0484671);border-radius: 5.47059px;") 
+                        tr(style="background: #d40306 ;border-radius: 8px;overflow: hidden;box-shadow: 0px 10.9412px 10.9412px rgba(82, 77, 141, 0.04), 0px 9.51387px 7.6111px rgba(82, 77, 141, 0.06), 0px 5.05275px 4.0422px rgba(82, 77, 141, 0.0484671);border-radius: 5.47059px;") 
                           th(style="padding: 18px 15px;border-top-left-radius: 8px;border-bottom-left-radius: 8px;text-align: left")
                             span(style="color: #fff;") Description
                           th(style="padding: 18px 15px;text-align: left")
@@ -141,7 +141,7 @@ html(lang='en')
                       tbody 
                         tr(style="box-shadow: 0px 10.9412px 10.9412px rgba(82, 77, 141, 0.04), 0px 9.51387px 7.6111px rgba(82, 77, 141, 0.06), 0px 5.05275px 4.0422px rgba(82, 77, 141, 0.0484671);border-radius: 5.47059px;") 
                           td(style="padding: 18px 15px;display:flex;align-items: center;gap: 10px;")
-                            span(style="min-width: 7px;height: 7px;border: 4px solid #006666;background: #fff;border-radius: 100%;display: inline-block;")
+                            span(style="min-width: 7px;height: 7px;border: 4px solid #d40306;background: #fff;border-radius: 100%;display: inline-block;")
                             span Project
                           td(style="padding: 18px 15px;")
                             span $4,000.00
@@ -207,9 +207,9 @@ html(lang='en')
                   span(style="color: rgba(82, 82, 108, 0.8);") Authorized Sign
                 td
                   span(style="display: flex; justify-content: end; gap: 15px;")
-                    a(style="background: #006666 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
+                    a(style="background: #d40306 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
                       i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")
-                    a(style="background: rgba(0, 102, 102, 0.2);color: #006666 ; border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-1.html" download='') Download
+                    a(style="background: rgba(0, 102, 102, 0.2);color: #d40306 ; border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-1.html" download='') Download
                       i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")
                   // Container-fluid Ends
         include ../../components/footer        
