--- a/public/assets/pug/pages/template/invoice-2.pug
+++ b/public/assets/pug/pages/template/invoice-2.pug
@@ -102,7 +102,7 @@ html(lang='en')
                   td 
                     table(style='width: 100%;border-collapse: separate;border-spacing: 0;border: 1px solid rgba(82, 82, 108, 0.1)')
                       thead 
-                        tr(style="background:#006666;border-radius: 8px;overflow: hidden;box-shadow: 0px 10.9412px 10.9412px rgba(82, 77, 141, 0.04), 0px 9.51387px 7.6111px rgba(82, 77, 141, 0.06), 0px 5.05275px 4.0422px rgba(82, 77, 141, 0.0484671);border-radius: 5.47059px;") 
+                        tr(style="background:#d40306;border-radius: 8px;overflow: hidden;box-shadow: 0px 10.9412px 10.9412px rgba(82, 77, 141, 0.04), 0px 9.51387px 7.6111px rgba(82, 77, 141, 0.06), 0px 5.05275px 4.0422px rgba(82, 77, 141, 0.0484671);border-radius: 5.47059px;") 
                           th(style="padding: 18px 15px;text-align: left")
                             span(style="color: #fff; font-size: 18px;") Products
                           th(style="padding: 18px 15px;text-align: left")
@@ -212,16 +212,16 @@ html(lang='en')
                                         span(style="font-weight: 600; font-size: 20px; ") Total Amount
                                         span(style="margin-left: 8px;") :
                                     td(style="padding: 12px 24px 22px 0;;text-align: right")
-                                        span(style="font-weight: 500; font-size: 20px; color: #006666 ;") $26,410.00
+                                        span(style="font-weight: 500; font-size: 20px; color: #d40306 ;") $26,410.00
                 tr 
                     td 
                         span(style="display:block;background: rgba(82, 82, 108, 0.3);height: 1px;width: 100%;margin-bottom:24px;")
                 tr
                   td
                     span(style="display: flex; justify-content: end; gap: 15px;")
-                      a(style="background: #006666 ; color:rgba(255, 255, 255, 1);border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
+                      a(style="background: #d40306 ; color:rgba(255, 255, 255, 1);border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
                         i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")
-                      a(style="background: rgba(0, 102, 102, 0.2);color: #006666 ;border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-2.html" download='') Download
+                      a(style="background: rgba(0, 102, 102, 0.2);color: #d40306 ;border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-2.html" download='') Download
                         i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")              
         include ../../components/footer        
     include ../../components/footer-files
