--- a/public/assets/pug/pages/template/invoice-4.pug
+++ b/public/assets/pug/pages/template/invoice-4.pug
@@ -94,7 +94,7 @@ html(lang='en')
                   td 
                     table(style='width: 100%; border-spacing:0;')
                       thead 
-                        tr(style="background: #006666;") 
+                        tr(style="background: #d40306;") 
                           th(style="padding: 18px 15px;text-align: left; position: relative; border-top-left-radius: 10px;")
                             span(style="color: #fff; font-size: 18px; font-weight: 600;") Description
                           th(style="padding: 18px 15px;text-align: center")
@@ -145,7 +145,7 @@ html(lang='en')
                           td(style="width: 12%; text-align: center;") 
                             span(style=" font-weight: 600;opacity: 0.9;") $100.00
                 tr
-                  td(style="height:3px; width: 100%; background: linear-gradient(90deg, #006666 20.61%, #54BA4A 103.6%); display:block;")
+                  td(style="height:3px; width: 100%; background: linear-gradient(90deg, #d40306 20.61%, #54BA4A 103.6%); display:block;")
                 tr 
                     td
                         table(style="width:100%;")
@@ -178,9 +178,9 @@ html(lang='en')
                       span(style=" display: block; font-size: 14px; padding-top: 5px;") ( Designer )
                   td 
                     span(style="display: flex; justify-content: end; gap: 15px;")
-                      a(style="background: #006666 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
+                      a(style="background: #d40306 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
                         i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")
-                      a(style="background: rgba(0, 102, 102, 0.2);color: #006666 ; border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-4.html" download='') Download
+                      a(style="background: rgba(0, 102, 102, 0.2);color: #d40306 ; border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-4.html" download='') Download
                         i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")                
         include ../../components/footer
     include ../../components/footer-files
