--- a/public/assets/pug/pages/template/invoice-5.pug
+++ b/public/assets/pug/pages/template/invoice-5.pug
@@ -58,7 +58,7 @@ html(lang='en')
                             img.img-fluid.for-light(src='../assets/images/logo/logo_dark.png', alt='logo-light')
                             img.img-fluid.for-dark(src='../assets/images/logo/logo.png', alt='logo-dark')
                           td
-                              ul(style="list-style: none; display: flex; align-items: center; background: linear-gradient(291deg,  #006666 21.2%, #006666 83.92%); padding: 31px 80px; border-bottom-left-radius: 100px; gap:28px;")
+                              ul(style="list-style: none; display: flex; align-items: center; background: linear-gradient(291deg,  #d40306 21.2%, #d40306 83.92%); padding: 31px 80px; border-bottom-left-radius: 100px; gap:28px;")
                                   li  
                                       svg.stroke-icon(style="height:14px; width: 14px; fill:#fff; margin-right: 10px;")
                                           use(href="../public/assets/svg/icon-sprite.svg#call")
@@ -73,7 +73,7 @@ html(lang='en')
                                       span(style="color: #FFFFFF; font-weight: 500; font-size: 16px;") Website: www.Rihothemes.com
                       tr(style="display: flex; justify-content: space-between;")
                           td 
-                              span(style="font-size: 18px; display:block; font-weight: 600; color:#006666 ; margin-bottom: 14px;") Invoice to :
+                              span(style="font-size: 18px; display:block; font-weight: 600; color:#d40306 ; margin-bottom: 14px;") Invoice to :
                               span(style="font-size: 18px; display:block; font-weight: 600;  margin-bottom: 8px;") Brooklyn Simmons
                               span(style="font-size: 18px; display:block;  opacity: 0.8; margin-bottom: 8px; width: 72%; line-height: 1.4;") 2972 Westheimer Rd. Santa Ana, Illinois 85486 
                               span(style="font-size: 18px; display:block;  opacity: 0.8; margin-bottom: 8px;") Phone : (219) 555-0114
@@ -81,7 +81,7 @@ html(lang='en')
                               span(style="font-size: 18px; display:block;  opacity: 0.8; margin-bottom: 8px;") Website: www.websites.com
                           td
                               h4(style="font-size:42px; font-weight: 600;  margin:0 0 12px 0;") INVOICE
-                              span(style="font-size: 18px;color: #006666; display: block; font-weight: 600; margin-bottom: 20px;") Bank Transfer
+                              span(style="font-size: 18px;color: #d40306; display: block; font-weight: 600; margin-bottom: 20px;") Bank Transfer
                               span(style=" display: block; margin-bottom: 12px; font-weight: 600;") Leslie Alexander
                               span(style="display: block;  font-size: 18px; margin-bottom: 12px;") Bank Account : 0981234098765
                               span(style="display: block;  font-size: 18px; margin-bottom: 12px;") Code : LEF098756
@@ -106,7 +106,7 @@ html(lang='en')
                 td 
                   table(style='width: 100%; border-spacing:0;')
                     thead 
-                      tr(style="background: #006666;") 
+                      tr(style="background: #d40306;") 
                         th(style="padding: 18px 15px;text-align: center; position: relative; border-top-left-radius: 10px;")
                           span(style="color: #fff; font-size: 18px; font-weight: 600;") No.
                         th(style="padding: 18px 16px;text-align: left;")
@@ -205,9 +205,9 @@ html(lang='en')
                     span(style=" display: block; font-size: 14px; padding-top: 5px;") ( Designer )
                 td 
                   span(style="display: flex; justify-content: end; gap: 15px;") 
-                    a(style="background: #006666 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
+                    a(style="background: #d40306 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
                       i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")
-                    a(style="background: rgba(0, 102, 102, 0.2);color: #006666 ; ;border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-5.html" download='') Download
+                    a(style="background: rgba(0, 102, 102, 0.2);color: #d40306 ; ;border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-5.html" download='') Download
                       i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")   
         include ../../components/footer
     include ../../components/footer-files
