--- a/public/assets/pug/pages/template/letter-box.pug
+++ b/public/assets/pug/pages/template/letter-box.pug
@@ -973,7 +973,7 @@ html(lang='en')
                                                                     input#Email_Modal.form-control(type='email')
                                                                 label.form-label.col-sm-2(for='exampleColorInput') Label Color :
                                                                 .col-sm-2.col-2
-                                                                    input#exampleColorInput.form-control.form-control-color(type='color' value='#006666' title='Choose your color')
+                                                                    input#exampleColorInput.form-control.form-control-color(type='color' value='#d40306' title='Choose your color')
 
                                                            
                                                     .modal-footer
