--- a/public/assets/pug/pages/template/task.pug
+++ b/public/assets/pug/pages/template/task.pug
@@ -506,7 +506,7 @@ html(lang='en')
                                         input.form-control(type='text', required='', autocomplete='off')
                                       div.mt-0.col-md-12
                                         label Tag color 
-                                        input.form-color.d-block(type='color', value='#006666')
+                                        input.form-color.d-block(type='color', value='#d40306')
                                     button.btn.btn-secondary(type='button') Save
                                     button.btn.btn-primary(type='button', data-bs-dismiss='modal') Cancel
             #exampleModal.modal.fade.modal-bookmark(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
@@ -574,3 +574,4 @@ html(lang='en')
           // Container-fluid Ends
         include ../../components/footer
     include ../../components/footer-files
+
