--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -118,7 +118,7 @@
 @import "utils/variables";
 
 :root {
-    --theme-deafult: #006666;
+    --theme-deafult: #d40306;
     --theme-secondary: #FE6A49;
     --light-background: rgba(242, 243, 247, 0.7);
     --body-font-color: #86909C;
