--- a/public/assets/pug/pages/template/basic-template.pug
+++ b/public/assets/pug/pages/template/basic-template.pug
@@ -83,7 +83,7 @@ html(lang='en')
                             p Hi There,
                             p Sometimes you just want to send a simple HTML email with a simple design and clear call to action.
                             .text-center
-                              a(href='contacts.html' style='padding: 10px; background-color: #006666; color: #fff; display: inline-block; border-radius:30px; margin-bottom:18px; font-weight:600; padding:0.6rem 1.75rem;') Call To Action 
+                              a(href='contacts.html' style='padding: 10px; background-color: #d40306; color: #fff; display: inline-block; border-radius:30px; margin-bottom:18px; font-weight:600; padding:0.6rem 1.75rem;') Call To Action 
                             p This is a really simple email template. It's sole purpose is to get the recipient to click the button with no distractions.
                             p(style='margin-bottom: 0') Good luck! Hope it works.
                     table(style=' margin: 0 auto; margin-top: 30px')
@@ -92,5 +92,5 @@ html(lang='en')
                           td 
                             p(style='color: #999; margin-bottom: 0') 333 Woodland Rd. Baldwinsville, NY 13027
                             p(style='color: #999; margin-bottom: 0') Don't Like These Emails?
-                              a(href='#', style='color: #006666') Unsubscribe
+                              a(href='#', style='color: #d40306') Unsubscribe
                             p(style='color: #999; margin-bottom: 0') Powered By Riho Admin
