--- a/public/assets/pug/pages/template/bookmark.pug
+++ b/public/assets/pug/pages/template/bookmark.pug
@@ -678,7 +678,7 @@ html(lang='en')
                                         input.form-control(type='text', required='', autocomplete='off')
                                       .mb-3.mt-0.col-md-12
                                         label Tag color
-                                        input.form-color.d-block(type='color', value='#006666')
+                                        input.form-color.d-block(type='color', value='#d40306')
                                     button.btn.btn-secondary(type='button') Save
                                     button.btn.btn-primary(type='button', data-bs-dismiss='modal') Cancel
                           #exampleModal.modal.fade.modal-bookmark(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
@@ -714,3 +714,4 @@ html(lang='en')
           // Container-fluid Ends
         include ../../components/footer
     include ../../components/footer-files
+
