--- a/public/assets/pug/pages/template/chart-knob.pug
+++ b/public/assets/pug/pages/template/chart-knob.pug
@@ -49,7 +49,7 @@ html(lang='en')
                     .knob-block.text-center.knob-chart
                       .chart-clock-main
                         .clock-large
-                          input.knob.hour(data-min='0', data-max='24', data-bgcolor='#eeeeee', data-fgcolor='#006666', data-displayinput='false', data-width='300', data-height='300', data-thickness='.2')
+                          input.knob.hour(data-min='0', data-max='24', data-bgcolor='#eeeeee', data-fgcolor='#d40306', data-displayinput='false', data-width='300', data-height='300', data-thickness='.2')
                         .clock-medium
                           input.knob.minute(data-min='0', data-max='60', data-bgcolor='#eeeeee', data-fgcolor='#FE6A49', data-displayinput='false', data-width='200', data-height='200', data-thickness='.20')
                         .clock-small
@@ -60,49 +60,50 @@ html(lang='en')
                     h4 Tron
                   .card-body
                     .knob-block.text-center
-                      input.knob(data-width='295', data-height='295', data-angleoffset='180', data-fgcolor='#006666', data-skin='tron', data-thickness='.1', value='35')
+                      input.knob(data-width='295', data-height='295', data-angleoffset='180', data-fgcolor='#d40306', data-skin='tron', data-thickness='.1', value='35')
               .col-xl-4.col-md-6
                 .card
                   .card-header
                     h4 Angle Offset
                   .card-body
                     .knob-block.text-center
-                      input.knob(data-width='200', data-thickness='.1', data-angleoffset='90', data-fgcolor='#006666', data-linecap='round', value='35')
+                      input.knob(data-width='200', data-thickness='.1', data-angleoffset='90', data-fgcolor='#d40306', data-linecap='round', value='35')
               .col-xl-4.col-md-6
                 .card
                   .card-header
                     h4 Disable Display Input
                   .card-body
                     .knob-block.text-center.knob-input-disable
-                      input.knob(data-width='200', data-thickness='.1', data-fgcolor='#006666', data-displayinput='false', value='35')
+                      input.knob(data-width='200', data-thickness='.1', data-fgcolor='#d40306', data-displayinput='false', value='35')
               .col-xl-4.col-md-6
                 .card
                   .card-header
                     h4 Cursor Mode
                   .card-body
                     .knob-block.text-center
-                      input.knob(data-width='200', data-cursor='true', data-fgcolor='#006666', data-thickness='.1', value='29')
+                      input.knob(data-width='200', data-cursor='true', data-fgcolor='#d40306', data-thickness='.1', value='29')
               .col-xl-4.col-md-6
                 .card
                   .card-header
                     h4 Display Previous Value
                   .card-body
                     .knob-block.text-center
-                      input.knob(data-width='200', data-thickness='.1', data-fgcolor='#006666', data-min='-100', data-displayprevious='true', value='44')
+                      input.knob(data-width='200', data-thickness='.1', data-fgcolor='#d40306', data-min='-100', data-displayprevious='true', value='44')
               .col-xl-4.col-md-6
                 .card
                   .card-header
                     h4 Angle Offset & Arc
                   .card-body
                     .knob-block.text-center
-                      input.knob(data-angleoffset='-125', data-anglearc='250', data-fgcolor='#006666', data-thickness='.1', data-rotation='anticlockwise', value='35')
+                      input.knob(data-angleoffset='-125', data-anglearc='250', data-fgcolor='#d40306', data-thickness='.1', data-rotation='anticlockwise', value='35')
               .col-xl-4.col-md-6
                 .card
                   .card-header
                     h4 4-digit, step 0.1
                   .card-body 
                     .knob-block.text-center
-                      input.knob(data-min='-10000', data-thickness='.1', data-fgcolor='#006666', data-displayprevious='true', data-max='10000', data-step='.1', value='0')
+                      input.knob(data-min='-10000', data-thickness='.1', data-fgcolor='#d40306', data-displayprevious='true', data-max='10000', data-step='.1', value='0')
           // Container-fluid Ends
         include ../../components/footer
     include ../../components/footer-files
+
