--- a/public/assets/pug/pages/template/ecommerce-templates.pug
+++ b/public/assets/pug/pages/template/ecommerce-templates.pug
@@ -106,12 +106,12 @@ html(lang='en')
         display:flex;
         justify-content:center;
         align-items:center;
-        color:#006666;
-        border:1px solid #006666;
+        color:#d40306;
+        border:1px solid #d40306;
         transition:all 0.5s ease;
       }
       .temp-social td i:hover{
-        background-color:#006666;
+        background-color:#d40306;
         color:#ffffff;
       }   
       .temp-social td:nth-child(n+2){
@@ -339,10 +339,10 @@ html(lang='en')
                         tbody
                           tr
                             td
-                              a(href='javascript:void(0)' style='color: #006666;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
+                              a(href='javascript:void(0)' style='color: #d40306;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
                           tr
                             td
                               p(style='font-size:14px; margin:8px 0; color:#717171;') 2022 - 23 Copy Right by Themeforest powerd by Pixel Strap
                           tr 
                             td 
-                              a(href='javascript:void(0)' style='color: #006666;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
+                              a(href='javascript:void(0)' style='color: #d40306;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
