--- a/public/assets/pug/pages/template/email-header.pug
+++ b/public/assets/pug/pages/template/email-header.pug
@@ -87,7 +87,7 @@ html(lang='en')
                     h6(style='font-weight: 600') Password Reset
                     p you forgot your password for Riho Admin. If this is true, click below to reset your password.
                     p(style='text-align: center')
-                      a(href='reset-password.html' style='padding: 10px; background-color:#006666; color: #fff; display: inline-block; border-radius:30px; font-weight:700; padding:0.6rem 1.75rem;') Reset Password
+                      a(href='reset-password.html' style='padding: 10px; background-color:#d40306; color: #fff; display: inline-block; border-radius:30px; font-weight:700; padding:0.6rem 1.75rem;') Reset Password
                     p If you have remember your password you can safely ignore his email.
                     p Good luck! Hope it works.
                     p(style='margin-bottom: 0') Regards,<br>
@@ -98,5 +98,5 @@ html(lang='en')
                   td 
                     p(style='color: #999; margin-bottom: 0') 333 Woodland Rd. Baldwinsville, NY 13027
                     p(style='color: #999; margin-bottom: 0') Don't Like These Emails?
-                      a(href='#', style='color: #006666') Unsubscribe 
+                      a(href='#', style='color: #d40306') Unsubscribe 
                     p(style='color: #999; margin-bottom: 0') Powered By Riho Admin 
