--- a/public/assets/pug/pages/template/invoice-3.pug
+++ b/public/assets/pug/pages/template/invoice-3.pug
@@ -72,12 +72,12 @@ html(lang='en')
                         tr(style="padding: 28px 0; display: flex; justify-content: space-between;") 
                           td
                             span(style=" font-size: 16px; font-weight: 500; opacity: 0.8;") CLIENT DETAILS
-                            h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 18px; #006666;") Brooklyn Simmons
+                            h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 18px; #d40306;") Brooklyn Simmons
                             span(style="width: 54%; display:block; line-height: 1.5;  font-size: 18px; font-weight: 400;opacity: 0.8;") 2118 Thornridge Cir. Syracuse, Connecticut 35624, United State
                             span(style="line-height:2;  font-size: 18px; font-weight: 400;opacity: 0.8;") Phone : (239) 555-0108
                           td
                             span(style="font-size: 16px; font-weight: 500;opacity: 0.8;") SHIPPING ADDRESS
-                            h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 18px; #006666;") Brooklyn Simmons
+                            h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 18px; #d40306;") Brooklyn Simmons
                             span(style="display:block; line-height: 1.5;  font-size: 18px; font-weight: 400;opacity: 0.8;") 2972 Westheimer Rd. Santa Ana, Illinois 85486 
                             span(style="line-height:2;  font-size: 18px; font-weight: 400;opacity: 0.8;") Phone : (219) 555-0114
                 tr 
@@ -87,7 +87,7 @@ html(lang='en')
                   td 
                     table(style='width: 100%;border-spacing:0;')
                       thead 
-                        tr(style="background: #006666;") 
+                        tr(style="background: #d40306;") 
                           th(style="padding: 18px 15px;text-align: left")
                             span(style="color: #fff; font-size: 18px; font-weight: 600;") Description
                           th(style="padding: 18px 15px;text-align: center;border-inline: 3px solid #fff;")
@@ -99,7 +99,7 @@ html(lang='en')
                       tbody
                         tr
                           td(style="padding: 18px 15px 18px 0;display:flex;align-items: center;gap: 10px; border-bottom:1px solid #52526C4D;")
-                            span(style="width: 3px; height: 37px; background-color:#006666;")
+                            span(style="width: 3px; height: 37px; background-color:#d40306;")
                             ul(style="padding: 0;margin: 0;list-style: none;")
                                 li.invoice-title.invoice-text
                                     h4(style="font-weight:600; margin:4px 0px; font-size: 18px;") HTML Admin template
@@ -156,12 +156,12 @@ html(lang='en')
                                 tr(style="display:flex; justify-content: space-between; margin:28px 0; align-items: center;")
                                     td 
                                         span(style=" font-size: 16px; font-weight: 500;opacity: 0.8; font-weight: 600;") BANK TRANSFER
-                                        h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 18px; color:#006666;") Leslie Alexander
+                                        h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 18px; color:#d40306;") Leslie Alexander
                                         span(style=" display:block; line-height: 1.5;  font-size: 18px; font-weight: 400;") Bank Account : 0981234098765
                                         span(style="line-height:1.6;  font-size: 18px; font-weight: 400;") Code : LEF098756
                                     td
                                         span(style="font-size: 16px; font-weight: 500;opacity: 0.8; font-weight: 600;") TOTAL AMOUNT
-                                        h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 26px;color:#006666;") $175.00
+                                        h4(style="font-weight:600; margin: 12px 0 5px 0; font-size: 26px;color:#d40306;") $175.00
                                         span(style=" font-size: 16px; font-weight: 400; line-height: 1.5;") All Taxes included      
                 tr 
                     td  
@@ -169,9 +169,9 @@ html(lang='en')
                 tr 
                   td 
                     span(style="display: flex; justify-content: end; gap: 15px;") 
-                      a(style="background: #006666 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
+                      a(style="background: #d40306 ; color:rgba(255, 255, 255, 1); border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="#!" onclick="window.print();") Print Invoice
                         i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")
-                      a(style="background: rgba(0, 102, 102, 0.2);color: #006666 ;  border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-3.html" download='') Download
+                      a(style="background: rgba(0, 102, 102, 0.2);color: #d40306 ;  border-radius: 10px;padding: 18px 27px;font-size: 16px;font-weight: 600;outline: 0;border: 0; text-decoration: none;" href="../template/invoice-3.html" download='') Download
                         i.icon-arrow-right(style="font-size:13px;font-weight:bold; margin-left: 10px;")              
         include ../../components/footer
     include ../../components/footer-files
