--- a/public/assets/pug/pages/template/template-email-2.pug
+++ b/public/assets/pug/pages/template/template-email-2.pug
@@ -114,12 +114,12 @@ head
             display:flex;
             justify-content:center;
             align-items:center;
-            color: #006666;       
-            border:1px solid  #006666;
+            color: #d40306;       
+            border:1px solid  #d40306;
             transition:all 0.5s ease;
       }
       .temp-social td i:hover{
-        background-color: #006666;
+        background-color: #d40306;
         color:#ffffff;
       }   
       .temp-social td:nth-child(n+2){
@@ -268,7 +268,7 @@ body(style='margin: 20px auto; ')
               tr
                 th(align='center', width='40%')
                   img.img-fluid(src='../assets/images/email-template/slider.jpg', alt='')
-                th(width='60%', style='background-color: #006666; padding: 30px;')
+                th(width='60%', style='background-color: #d40306; padding: 30px;')
                   table(align='center', border='0', cellpadding='0', cellspacing='0', width='100%')
                     tbody
                       tr
@@ -284,9 +284,9 @@ body(style='margin: 20px auto; ')
                   table
                     tbody
                       tr
-                        td.text-button.white-button(style='font-size:14px; line-height:18px; text-align:center; text-transform:uppercase; padding:0.6rem 1.75rem; background:#ffffff; color: #006666; font-weight:bold; border-radius:30px;')
+                        td.text-button.white-button(style='font-size:14px; line-height:18px; text-align:center; text-transform:uppercase; padding:0.6rem 1.75rem; background:#ffffff; color: #d40306; font-weight:bold; border-radius:30px;')
                           a(href='javascript:void(0)', target='_blan', style='color:#4e54cb; text-decoration:none;')
-                            span(style='color: #006666; text-decoration:none;') shop now
+                            span(style='color: #d40306; text-decoration:none;') shop now
           h4.title(style='width: 100%; text-align:center;margin-top: 50px;') trending product
           p(style='margin:0') GET EVEN 25% OFF DISCOUNT
           table.product-sec(align='center', border='0', cellpadding='0', cellspacing='0', width='100%', style='margin-top:30px;')
@@ -344,25 +344,25 @@ body(style='margin: 20px auto; ')
                           img(src='../assets/images/email-template/10.jpg', alt='', style='width: 225px;margin-bottom: -4px; border-top-left-radius:10px;')
                         td(align='center', style='background-color: #fafafa;width: 60%; border-top-right-radius:10px; padding: 12px;')
                           h3(style='margin: 0; font-size: 18px;') Product One
-                          div(style='color: #006666; font-weight:600; font-size:16px; line-height:27px; letter-spacing:1px;margin: 4px;')
+                          div(style='color: #d40306; font-weight:600; font-size:16px; line-height:27px; letter-spacing:1px;margin: 4px;')
                             span.txt-price1(style='color:#666666; font-weight:600; font-size:15px; line-height:25px; letter-spacing:1px;', data-color='Price1', data-size='Price1', data-min='10', data-max='35')
                               strike $25.00
                             span.txt-price2    
                             | $20.90
                           div(style='padding: 15px 0px;text-transform: uppercase;font-size: 11px;letter-spacing: 1px;')
-                            a(href='javascript:void(0)', style='color: #ffffff;text-decoration:none; border-radius:10px;; background: #006666; padding: 8px 12px;') SHOP NOW
+                            a(href='javascript:void(0)', style='color: #ffffff;text-decoration:none; border-radius:10px;; background: #d40306; padding: 8px 12px;') SHOP NOW
                   table.display-width-inner(align='center', border='0', cellpadding='0', cellspacing='0', width='100%', style='max-width:450px;')
                     tbody
                       tr
                         td(align='center', style='background-color: #fafafa;width: 60%; padding: 12px;')
                           h3(style='margin: 0; font-size: 18px;') Product One
-                          div(style='color: #006666; font-weight:600; font-size:16px; line-height:27px; letter-spacing: 1px; margin: 4px;')
+                          div(style='color: #d40306; font-weight:600; font-size:16px; line-height:27px; letter-spacing: 1px; margin: 4px;')
                             span.txt-price1(style='color:#666666; font-weight:600; font-size:15px; line-height:25px; letter-spacing:1px;', data-color='Price1', data-size='Price1', data-min='10', data-max='35')
                               strike $25.00
                             span.txt-price2 
                             | $20.90
                           div(style='padding: 15px 0px;text-transform: uppercase;font-size: 11px;letter-spacing: 1px;')
-                            a(href='javascript:void(0)', style='color: #ffffff;text-decoration:none; border-radius:10px;; background: #006666; padding: 8px 12px;') SHOP NOW
+                            a(href='javascript:void(0)', style='color: #ffffff;text-decoration:none; border-radius:10px;; background: #d40306; padding: 8px 12px;') SHOP NOW
                         td.img-sec(align='center', style='width: 40%;')
                           img(src='../assets/images/email-template/11.jpg', alt='', style='width: 225px;margin-bottom: -4px;')
                   table.display-width-inner(align='center', border='0', cellpadding='0', cellspacing='0', width='100%', style='max-width:450px;')
@@ -372,13 +372,13 @@ body(style='margin: 20px auto; ')
                           img(src='../assets/images/email-template/12.jpg', alt='', style='width: 225px;margin-bottom: -4px; border-bottom-left-radius:10px;')
                         td(align='center', style='background-color: #fafafa;width: 60%; border-bottom-right-radius:10px; padding: 12px;')
                           h3(style='margin: 0; font-size: 18px;') Product One
-                          div(style='color: #006666; font-weight:600; font-size:16px; line-height:27px; letter-spacing:1px; margin: 4px;')
+                          div(style='color: #d40306; font-weight:600; font-size:16px; line-height:27px; letter-spacing:1px; margin: 4px;')
                             span.txt-price1(style='color:#666666; font-weight:600; font-size:15px; line-height:25px; letter-spacing:1px;', data-color='Price1', data-size='Price1', data-min='10', data-max='35')
                               strike $25.00
                             span.txt-price2    
                             | $20.90
                           div(style='padding: 15px 0px;text-transform: uppercase;font-size: 11px;letter-spacing: 1px;')
-                            a(href='javascript:void(0)', style='color: #ffffff;text-decoration:none; border-radius:10px;; background: #006666; padding: 8px 12px;') SHOP NOW
+                            a(href='javascript:void(0)', style='color: #ffffff;text-decoration:none; border-radius:10px;; background: #d40306; padding: 8px 12px;') SHOP NOW
           table.main-bg-light.text-center(align='center' border='0' cellpadding='0' cellspacing='0' width='100%' style='margin-top:30px;')
             tbody
               tr
@@ -411,10 +411,10 @@ body(style='margin: 20px auto; ')
                     tbody
                       tr
                         td
-                          a(href='javascript:void(0)' style='color:  #006666;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
+                          a(href='javascript:void(0)' style='color:  #d40306;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
                       tr
                         td 
                           p(style='font-size:14px; margin:8px 0; color:#717171;') 2022 - 23 Copy Right by Themeforest powerd by Pixel Strap
                       tr
                         td
-                          a(href='javascript:void(0)' style='color:  #006666;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
+                          a(href='javascript:void(0)' style='color:  #d40306;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
