--- a/public/assets/pug/pages/template/template-email.pug
+++ b/public/assets/pug/pages/template/template-email.pug
@@ -58,7 +58,7 @@ head
       width:100%;
     }
     .menu li a:hover{
-      color: #006666 !important;
+      color: #d40306 !important;
     }
     .menu li a{
       text-transform:capitalize;
@@ -109,12 +109,12 @@ head
       display:flex;
       justify-content:center;
       align-items:center;
-      color:#006666;       
-      border:1px solid #006666;
+      color:#d40306;       
+      border:1px solid #d40306;
       transition:all 0.5s ease;
     }
     .temp-social td i:hover{
-      background-color:#006666;
+      background-color:#d40306;
       color:#ffffff;
     }   
     .temp-social td:nth-child(n+2){
@@ -330,11 +330,11 @@ table(align='center' border='0' cellpadding='0' cellspacing='0' style='margin:20
               td
                 img.img-fluid( style="border-radius:10px;"  ,src='../assets/images/email-template/3.png')
               td
-                div(style='border-top:1px solid #006666; mso-line-height-rule: exactly;' data-border-bottom-color='Week Border')
+                div(style='border-top:1px solid #d40306; mso-line-height-rule: exactly;' data-border-bottom-color='Week Border')
                 a(href='javascript:void(0)')
                   .Heading(align='center' style='color:#333333;font-weight:600; font-size:23px; letter-spacing:1px; line-height:35px; mso-line-height-rule: exactly; margin-top: 15px;' data-color='Week Heading' data-size='Week Heading' data-min='15' data-max='43') This Week&apos;s Sale 
                   .Heading(align='center' style='color:#333333; font-weight:600; font-size:25px; letter-spacing:1px; line-height:35px; mso-line-height-rule: exactly; margin-bottom: 15px;' data-color='Week Heading' data-size='Week Heading' data-min='15' data-max='45') Save Up To 50%
-                div(style='border-bottom:1px solid #006666; mso-line-height-rule: exactly;' data-border-bottom-color='Week Border')
+                div(style='border-bottom:1px solid #d40306; mso-line-height-rule: exactly;' data-border-bottom-color='Week Border')
             tr
               td(height='45' style='mso-line-height-rule:exactly; line-height:45px;')
         table(border='0' cellpadding='0' cellspacing='0' width='100%')
@@ -384,10 +384,11 @@ table(align='center' border='0' cellpadding='0' cellspacing='0' style='margin:20
                   tbody
                     tr
                       td
-                        a(href='javascript:void(0)' style='color: #006666;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
+                        a(href='javascript:void(0)' style='color: #d40306;font-size:14px;text-transform: capitalize;font-weight:600;') Want to change how you receive these emails?
                     tr
                       td
                         p(style='font-size:14px; margin:8px 0; color:#717171;') 2022 - 23 Copy Right by Themeforest powerd by Pixel Strap
                     tr  
                       td
-                        a(href='javascript:void(0)' style='color: #006666;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
+                        a(href='javascript:void(0)' style='color: #d40306;font-size: 14px;text-transform: capitalize;font-weight:600; margin:0;') Unsubscribe
+
