--- a/public/assets/scss/components/_buttons.scss
+++ b/public/assets/scss/components/_buttons.scss
@@ -6,14 +6,14 @@
 }
 
 .purchase-btn {
-  background: linear-gradient(90deg, var(--theme-deafult) -18.33%, #006666 62.78%);
+  background: linear-gradient(90deg, var(--theme-deafult) -18.33%, #d40306 62.78%);
   padding: 12px 20px;
   min-width: 200px;
   border: none;
   transition: 0.5s;
 
   &:hover {
-    background: linear-gradient(90deg, #006666 -18.33%, var(--theme-deafult) 62.78%);
+    background: linear-gradient(90deg, #d40306 -18.33%, var(--theme-deafult) 62.78%);
     transition: 0.5s;
   }
 
