--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3683,7 +3683,7 @@ table tbody .border-bottom-warning td {
 body {
   font-size: 14px;
   overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #051A1A;
 }
 
