--- a/public/assets/css/custom-enhanced.css
+++ b/public/assets/css/custom-enhanced.css
@@ -16,6 +16,8 @@
 
 body {
   font-family: 'Poppins', sans-serif !important;
+  font-size: 15px;
+  font-weight: 400;
   color: var(--text-dark);
   background-color: #f0f2f5;
   /* Slightly darker for contrast with white cards */
@@ -449,4 +451,10 @@ button.btn.btn-secondary:hover {
   background-color: #5a6268;
   transform: translateY(-1px);
   box-shadow: 0 4px 15px rgba(108, 117, 125, 0.2);
+}
+
+div.dataTables_wrapper {
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  letter-spacing: normal;
 }
